# megui

./: Cargo.toml  README.md  Trunk.toml  config.toml  index.html  megui-1c25d03fd2a15829.js  megui-3cec0b6283e7cc84.js
.github/workflows/: pages.yml
src/: app.rs  artwork.rs  config.rs  lib.rs  main.rs  routes.rs
src/components/: mod.rs  settings.rs  sidebar.rs  theme.rs
src/pages/: about.rs  artworks.rs  home.rs  mod.rs  resume.rs
