[package]
name = "megui"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
