[package]
name = "megui"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
ehttp = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
html2md = "0.2"
egui_commonmark = "0.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
